<resources>
    <string name="app_name">Rider!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="ready">Ready</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="please_wait">Please Wait...</string>

    <!-- Main activity -->
    <string name="title_main">Select the screen you want to go to.</string>
    <string name="activity_users">User Profile</string>
    <string name="activity_chat">Chat</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_map">Start Trip</string>
    <string name="enter_msg">Enter Message</string>
    <string name="output">Output</string>

    <!-- Chat Activity -->
    <string name="title_chat">Connect and send messages!</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="send">Send</string>

    <!-- Users Activity -->
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="fetch_all">Fetch All</string>

    <string name="confirm_del_user">Are you sure you want to delete this user?</string>

    <!-- Map Activity -->
    <string name="new_trip">New Trip</string>
    <string name="join_trip">Join Trip</string>
    <string name="trip_name">Trip Name</string>

    <string name="create_trip">Enter details below to create new Trip.</string>
    <string name="select_trip">Select the Trip you want to join.</string>

    <string name="create">Create</string>

    <string name="rider_list_trip">List of Riders on this Trip</string>
    <string name="confirm_del_user_trip">Are you sure you want to remove this Rider from this Trip?</string>
    <string name="confirm_leave_trip">Are you sure you want to leave this Trip?</string>
    <string name="confirm_join_trip">Are you sure you want to join this Trip?</string>

    <string name="join">Join</string>
    <string name="leave">Leave</string>

    <!-- API Messages -->
    <string name="error_server">Unexpected server error!</string>
    <string name="error_conn">Connection failure - please check your internet connection!</string>

</resources>
