<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="5dp"
        android:text="@string/title_main"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_users" />

        <Button
            android:id="@+id/btn_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_chat" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_map" />

    </LinearLayout>


</LinearLayout>