<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:text="@string/title_chat"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Server IP" />

                    <EditText
                        android:id="@+id/et_ip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Server Port" />

                    <EditText
                        android:id="@+id/et_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minLines="2"
                android:text="Ready"
                android:textColor="@android:color/holo_red_dark" />

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/sv_output"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/et_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:padding="5dp" />

            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/ll_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/enter_msg"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_send"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/send" />

                    </RelativeLayout>

                </LinearLayout>

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/sv_msg"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@android:color/white">

                    <EditText
                        android:id="@+id/et_msg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="left|top"
                        android:maxLength="500"
                        android:minLines="10" />

                </android.support.v4.widget.NestedScrollView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
